--- a/credits.html
+++ b/credits.html
@@ -50,7 +50,7 @@
       <li><a href="sa.html">Standards Australia</a></li>
       <li><a href="myPlasticFootprint.html">MyPlasticFootprint</a></li>
       <li><a href="WishUp.html">WishUp</a></li>
-      <li><a href="oldStuff.html">Old projects</a></li>
+      <li><a href="oldStuff.html">Old Projects</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
