--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 <div class ="overlay">
   <div class="menu-items" id="menu-links">
     <ul>
-      <li><a href="#home-intro" rel="m_PageScroll2id">Home</a></li>
+      <li><a href="#home-intro" rel="m_PageScroll2id">Intro</a></li>
       <li><a href="#projects" rel="m_PageScroll2id">Featured Project</a></li>
-      <li><a href="#works" rel="m_PageScroll2id">Past experience</a></li>
-      <li><a href="#other-concepts" rel="m_PageScroll2id">In incubation</a></li>
-      <li><a href="#old-stuff" rel="m_PageScroll2id">Old projects</a></li>
+      <li><a href="#works" rel="m_PageScroll2id">Past Experience</a></li>
+      <li><a href="#other-concepts" rel="m_PageScroll2id">Other Ideas</a></li>
+      <li><a href="#old-stuff" rel="m_PageScroll2id">Old Projects</a></li>
       <li><a href="#about" rel="m_PageScroll2id">About</a></li>
     </ul>
   </div>
@@ -107,11 +107,9 @@
   <!-- Intro Text -->
     <div id="intro_text">
       <h1>hi,</h1>
-      <h5 class="small-label">I'M <strong>NHUT</strong></h5>
+      <h5 class="small-label">I'M <strong>NHUT</strong>.</h5>
       <p>
-         I do <strong> UX&nbsp;/&nbsp;UI </strong>and currently working on my
-         <br />
-         <strong>Product&nbsp;Ideas</strong>.
+         I do <strong> UX&nbsp;/&nbsp;UI </strong>, and love to <i style="color:orange;">create</i> stuff.
       </p>
     </div>
     <!-- CTA arrow for next page -->
@@ -171,11 +169,11 @@
 
 
 <!-- Work Showcase Section -->
-<section class="side-projects" id="works">
+<section class="side-projects ease-in-w" id="works">
 
   <h3 class="ease-in-w">PAST EXPERIENCE</h3>
   <p class="ease-in-w tagline-text">
-    Projects I worked on as a full-time in-house designer.
+    My works as an in-house designer.
   </p>
 
   <div class="content-wrapper ease-in-w">
@@ -197,7 +195,7 @@
   </div>
 
   <div id="other-works-wrapper">
-    <h5 class="small-label ease-in-w">SIMILARLY</h5>
+    <h5 class="small-label ease-in-w">SIMILAR PROJECTS</h5>
 
     <div class="logos">
       <a href="https://www.radiorentals.com.au/" class="ease-in-w"><img alt="Radio Rentals" src="./Assets/logo_rr.png" /></a>
@@ -214,7 +212,7 @@
 
 
 
-<section class="side-projects" id="other-concepts">
+<section class="side-projects ease-in-o" id="other-concepts">
 
     <h3 class="ease-in-o">IDEAS IN INCUBATION</h3>
     <p class="ease-in-o tagline-text">
@@ -250,7 +248,7 @@
       </div>
 
     <div class="content-wrapper wrapper-incubation">
-      <a href="./WishUp.html" class="incubation-tile ease-in-o" id="wishUp-tile">
+      <a href="./WishUp.html" class="ease-in-o" id="wishUp-tile">
         <img id="wishUp-mockup-ip" alt="WishUp Screen" src="./Assets/wishUp-mockup-ip.png" />
       </a>
       <span class="decorative-line ease-in-o"></span>
@@ -277,10 +275,10 @@
 
 
 
-<section id="old-stuff">
+<section id="old-stuff" class="ease-in-os">
   <h3 class="ease-in-os">COURSEWORKS</h3>
   <p class="ease-in-os tagline-text">
-    Some old stuff I made back at uni.
+    My old projects from Uni.
   </p>
   <a class="CTA-button ease-in-os" id="oldStuff-CTA" href="./oldStuff.html">
     <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
@@ -303,15 +301,13 @@
     <div class="content-column">
       <h5 class="small-label ease-in-a">ABOUT</h5>
       <p class="ease-in-a">
-        I graduated in Multimedia Design and started my UX/UI career after an internship at S60, where I later
-        progressed as an in-house designer and gained lots of experience working in the industry.
+        I majored in Multimedia Design and have been working as a UX/UI Designer since graduation.
         <br /><br />
-        I am now working on advancing my career and experimenting product ideas since I have an ambition for innovation.
-        As well as looking for travel/relocation opportunities as I have always wanted to explore different places and
-        cultures, and would love to widen my experiences.
+        I am now working on advancing my career, education, and experimenting product ideas since I love to
+        learn, explore and create.
         <br /><br />
-        <i class="ease-in-a">Sorry social media isn't my cup of coffee. If you would like to contact me, please
-                             <a href="mailto:nhuthoangdon@gmail.com">send me an email</a>.</i>
+        <i class="ease-in-a">I can be contacted
+                             <a href="mailto:nhuthoangdon@gmail.com">here</a>.</i>
         </p>
     </div>
 
