--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -50,7 +50,7 @@
       <li><a href="sa.html">Standards Australia</a></li>
       <li><a href="myPlasticFootprint.html">MyPlasticFootprint</a></li>
       <li><a href="WishUp.html">WishUp</a></li>
-      <li><a href="oldStuff.html" onclick="closeMenu()">Old projects</a></li>
+      <li><a href="oldStuff.html" onclick="closeMenu()">Old Projects</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
@@ -82,7 +82,7 @@
     </div>
       <div class="block">
         <p>
-          Schecker is my idea of a smart Health App that makes it easier when you have a symptom.
+          Schecker is a smart Health App that makes it easier when you have a symptom.
           An all-in-one process of checking symptoms, smartly - booking doctor appointments - managing symptoms &
           medication.
         </p>
