--- a/bardot.html
+++ b/bardot.html
@@ -49,7 +49,7 @@
       <li><a href="sa.html" onclick="closeMenu()">Standards Australia</a></li>
       <li><a href="myPlasticFootprint.html" onclick="closeMenu()">MyPlasticFootprint</a></li>
       <li><a href="WishUp.html" onclick="closeMenu()">WishUp</a></li>
-      <li><a href="oldStuff.html" onclick="closeMenu()">Old projects</a></li>
+      <li><a href="oldStuff.html" onclick="closeMenu()">Old Projects</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
@@ -86,7 +86,7 @@
 
 </section>
 
-<section id="bardot-challenge">
+<section class="challenge" id="bardot-challenge">
   <h3 class="block-in">THE CHALLENGE</h3>
   <div class="wrapper">
     <div class="block">
