old stuff edited

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
     <h3 class="ease-in-o">IDEAS IN INCUBATION</h3>
     <p class="ease-in-o tagline-text">
-      Other product ideas I am working on.
+      Other product ideas.
     </p>
 
     <div class="content-wrapper wrapper-incubation">
@@ -299,7 +299,7 @@
 <section class="side-projects" id="about">
   <div class="content-wrapper">
     <div class="content-column">
-      <h5 class="small-label ease-in-a">ABOUT</h5>
+      <h5 class="small-label ease-in-a">ABOUT ME</h5>
       <p class="ease-in-a">
         I majored in Multimedia Design and have been working as a UX/UI Designer since graduation.
         <br /><br />
