--- a/oldStuff.html
+++ b/oldStuff.html
@@ -61,23 +61,24 @@
 
 <section id="old-proj">
   <h3>COURSEWORKS</h3>
+  <div class="leading-line"></div>
 
   <div class="eachStuff">
-      <div class="oldStuff-proj-wrapper reversed">
+      <div class="oldStuff-proj-wrapper">
+        <div class="oldStuff-proj">
+          <h5>STOP-MOTION ANIMATIONS</h5>
+          <p>
+            Stop-motion animations I did during a course of "Alternative Animation". Made with cut-out paper, hand-made puppet,
+            and play-doh, shot with my laptop's front camera.
+        </div>
+      </div>
+
+      <div class="oldStuff-proj-wrapper">
         <div class="oldStuff-proj">
           <video playsinline autoplay loop muted id="old-cutout-vid">
             <source src="./Assets/old-cutout.mov" type="video/mp4" />
             Sorry it's a really nice video your browser failed to load.
           </video>
-        </div>
-        <div class="oldStuff-proj">
-          <h5>STOP-MOTION ANIMATIONS</h5>
-          <p>
-            Stop-motion animations I did during a course of "Alternative Animation". Made with cut-out paper, homemade puppet,
-            and clay (play-doh actually) on my old Macbook Pro's front camera, in a shared apartment in Melbourne.
-            Since I was in a situation in which I couldn't afford much more, it's the improvision in order to have the
-            projects completed I'm proud of.
-          </p>
         </div>
       </div>
 
@@ -95,24 +96,31 @@
           </video>
         </div>
       </div>
-  </div>
+</div>
 
+<div class="leading-line"></div>
 
   <div class="eachStuff">
       <div class="oldStuff-proj-wrapper">
         <div class="oldStuff-proj">
           <h5>3D MODELING & ANIMATION</h5>
           <p>
-            Another coursework where I studied 3D modeling and basic animation (using 3ds Max).
-            Animation had always been my interest (still is), but life improvises too...
+            Another coursework where I studied 3D modeling and basic animation. Modeled and animated using 3ds Max.
+            Animation has always been my passion but for some reasons, I ended up working in a different field
+            (which I also enjoy).
           </p>
         </div>
+      </div>
+
+      <div class="oldStuff-proj-wrapper">
         <div class="oldStuff-proj">
           <video playsinline autoplay loop muted id="old-garlic-vid">
             <source src="./Assets/old-garlic.mov" type="video/mp4" />
             Sorry it's a really nice video your browser failed to load.
           </video>
         </div>
+      </div>
+      <div class="oldStuff-proj-wrapper">
         <div class="oldStuff-proj flex-grow">
           <img alt="collage" src="./Assets/3dmodeling-collage.png" />
         </div>
@@ -121,16 +129,18 @@
 
 
   <div class="eachStuff">
-      <div class="oldStuff-proj-wrapper reversed">
-        <div class="oldStuff-proj">
-          <img alt="poster" src="./Assets/poster.png" />
-        </div>
+      <div class="oldStuff-proj-wrapper">
         <div class="oldStuff-proj">
           <h5>GRAPHIC DESIGN</h5>
           <p>
             Conceptual courseworks with artworks to address/demonstrate the concepts. <br />
-            <i>Not my strongest skill - I made the right choice not being a graphic designer :)</i>
           </p>
+        </div>
+      </div>
+
+      <div class="oldStuff-proj-wrapper">
+        <div class="oldStuff-proj">
+          <img alt="poster" src="./Assets/poster.png" />
         </div>
       </div>
 
@@ -153,6 +163,9 @@
               & organic - the logo looked good engraved or embossed on leather materials and the like.
             </p>
           </div>
+        </div>
+
+        <div class="oldStuff-proj-wrapper">
           <div class="oldStuff-proj">
             <img alt="Nabulio Logo" src="./Assets/nabulio.png" />
           </div>
