--- a/credits.html
+++ b/credits.html
@@ -94,8 +94,7 @@
 
       <div class="wrapper" id="thank-dogs">
         <p>
-          <i>for ultimate facelicking, lapsitting and getting me out of the chair. <br />
-             Hopefully they'll be able to join me on my adventures at some dog-friendlier places.
+          <i>for ultimate facelicking, lapsitting and getting me out of the chair.
           </i>
         </p>
       </div>
