temporary front page change

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,200,400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800|Lilita+One&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="myStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -102,31 +103,81 @@
 
 
 
-<!-- Homepage Intro Section -->
-<section class="intro" id="home-intro">
   <!-- Intro Text -->
-    <div id="intro_text">
-      <h1>hi,</h1>
-      <h5 class="small-label">I'M <strong>NHUT</strong>.</h5>
-      <p>
-         I do <strong> UX&nbsp;/&nbsp;UI </strong>, and love to <i style="color:orange;">create</i> stuff.
-      </p>
-    </div>
-    <!-- CTA arrow for next page -->
-    <a class="CTAarrow arrow-down" id="home-CTAarrow" href="#projects" rel="m_PageScroll2id">
-          <div class="arrow-circles">
-              <div class="arrow-circle"></div>
-              <svg class="svg-circle" width="52px" height="52px" viewBox="0 0 52 52" >
-                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="Desktop-HD" transform="translate(-840.000000, -486.000000)" fill-rule="nonzero" stroke="#8C9BAF">
-                          <circle id="Oval" cx="866" cy="512" r="25"></circle>
-                      </g>
-                  </g>
-              </svg>
-          </div>
-          <div class="arrow"></div>
-    </a>
-</section>
+  <section class="intro" id="home-intro">
+
+    <h1 id="intro_text">Hey there, welcome! My name is Nhut, I do UX/UI for websites & apps.</h1>
+
+
+
+
+
+      <!-- CTA arrow for next page -->
+      <a class="CTAarrow arrow-down" id="home-CTAarrow" href="#projects" rel="m_PageScroll2id">
+            <div class="arrow-circles">
+                <div class="arrow-circle"></div>
+                <svg class="svg-circle" width="52px" height="52px" viewBox="0 0 52 52" >
+                    <g id="Page-1" stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
+                        <g id="Desktop-HD" transform="translate(-840.000000, -486.000000)" fill-rule="nonzero" stroke="#0C1826">
+                            <circle id="Oval" cx="866" cy="512" r="25"></circle>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+            <div class="arrow"></div>
+      </a>
+  </section>
+
+
+  <div class="background">
+        <?xml version="1.0" encoding="utf-8"?>
+      <!-- Generator: Adobe Illustrator 21.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+      <svg id="my-lion" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      	 viewBox="0 0 687.1 845.9" preserveAspectRatio="xMinYMin meet" style="enable-background:new 0 0 687.1 845.9;" xml:space="preserve">
+        <!-- <style type="text/css">
+        	.st0{fill:#e2e9ed;stroke:#FFFFFF;stroke-width:2;stroke-miterlimit:10;}
+        </style> -->
+
+          <polygon class="st0" points="434.1,564 425.1,585 425.1,637 362.1,666 362.1,844 520.1,736 "/>
+          <polygon class="st0" points="499.1,376 503.1,474 439.1,549 529.1,730 658.1,587 651.1,500 "/>
+          <polygon class="st0" points="502.1,365 655.1,490 686.1,407 682.1,307 "/>
+          <polygon class="st0" points="403.1,210 470.1,271 499.1,355 681.1,296 643.1,148 556.1,66 464.1,51 "/>
+          <polygon class="st0" points="455.1,45 393.1,205 310.1,205 152.1,60 266.1,1 412.1,1 "/>
+          <polygon class="st0" points="142.1,66 300.1,210 200.1,279 56.1,222 76.1,140 "/>
+          <polygon class="st0" points="190.1,284 53.1,230 27.1,293 35.1,341 "/>
+          <polygon class="st0" points="194.1,293 36.1,351 1.1,426 37.1,567 137.1,476 137.1,397 "/>
+          <polygon class="st0" points="202.1,296 147.1,399 147.1,482 41.1,578 93.1,656 202.1,606 238.1,516 191.1,419 "/>
+          <polygon class="st0" points="244.1,527 209.1,615 99.1,664 254.1,784 278.1,615 "/>
+          <polygon class="st0" points="287.1,629 263.1,791 352.1,844 352.1,666 "/>
+          <polygon class="st0" points="430.6,249 408.1,301 441.9,297 471.1,306 463.9,279 "/>
+          <polygon class="st0" points="406.1,422 457.1,426 433.1,372 "/>
+          <polygon class="st0" points="443.1,306 406.1,310 397.1,331 407.1,358 435.1,364 457.1,350 469.1,316 "/>
+          <polygon class="st0" points="403.1,430 370.1,478 370.1,496 459.1,500 441.1,465 454.1,435 "/>
+          <polygon class="st0" points="441.1,371 463.1,418 490.1,367 477.1,320 464.1,358 "/>
+          <polygon class="st0" points="491.1,383 451.1,464 468.1,498 492.1,472 "/>
+          <polygon class="st0" points="423.1,371 397.7,414 356.1,424 311.1,412 322.2,365.4 278.1,364 306.1,332 387.3,333 400.1,366 "/>
+          <polygon class="st0" points="395.1,425 355.1,436 317.1,423 348.1,478 348.1,496 359.1,496 359.1,478 "/>
+          <polygon class="st0" points="327.1,503 326.1,516 384.1,520 383.1,507 "/>
+          <polygon class="st0" points="392.1,507 396.1,551 413.1,508 "/>
+          <polygon class="st0" points="422.1,509 459.1,510 431.1,544 416.1,578 416.1,622 401.1,565 "/>
+          <polygon class="st0" points="383.1,607 392.1,569 405.1,611 "/>
+          <polygon class="st0" points="338.1,600 376.1,606 378.1,599 333.1,590 "/>
+          <polygon class="st0" points="303.1,595 316.1,568 330.1,599 "/>
+          <polygon class="st0" points="304.1,499 315.1,558 319.1,502 "/>
+          <polygon class="st0" points="299.1,602 408.1,619 412.1,631 356.1,657 290.1,619 "/>
+          <polygon class="st0" points="246.1,459 251.1,522 285.1,608 308.1,564 295.1,497 265.1,493 "/>
+          <polygon class="st0" points="337.1,495 270.1,485 246.1,446 244.1,421 274.1,372 311.1,374 301.1,413 337.1,480 "/>
+          <polygon class="st0" points="264.1,372 234.1,419 243.1,508 200.1,418 "/>
+          <polygon class="st0" points="257.1,366 200.1,407 207.1,337 225.1,328 "/>
+          <polygon class="st0" points="251.1,349 280.1,349 265.1,365 "/>
+          <polygon class="st0" points="232.1,324 247.1,342 287.1,342 299.1,330 282.1,334 250.1,334 "/>
+          <polygon class="st0" points="297.1,324 209.1,293 207.1,327 232.1,315 252.1,327 282.1,328 "/>
+          <polygon class="st0" points="292.1,314 210.1,284.2 302.1,219 276.1,273 "/>
+          <polygon class="st0" points="286.1,274 305.1,323 388.6,324 422.1,241 394.8,214 314.3,214 "/>
+
+      </svg>
+
+  </div>
 
 
 
