--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -158,7 +158,7 @@
 
   <img id="s_collage" alt="Completed screens" class=" noShadow-img" src="./Assets/schecker-screens.png" />
 
-      <a class="cta-w-label" id="schecker-viewInvision" href="https://invis.io/B8RU1TAPZYV">
+      <a class="cta-w-label" id="schecker-viewInvision" target="_blank" href="https://invis.io/B8RU1TAPZYV">
         <h5 class="CTA-label">VIEW PROTOTYPE</h5>
         <div class="CTAarrow arrow-next" id="scheckerCTA-next">
           <div class="arrow-circles">
@@ -218,7 +218,7 @@
   <small class="copyright">	&#169; 2019 NHUT H. DON</small>
   <div class="footer-links">
     <a href="./index.html">Home</a>
-    <a href="./index.html">About</a>
+    <a href="./about.html">About</a>
     <a href="./works.html">Works</a>
     <a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a>
     <a href="./credits.html">Credits</a>
