--- a/about.html
+++ b/about.html
@@ -4340,7 +4340,15 @@
 
 
 
-
+<footer>
+  <small class="copyright">	&#169; 2019 NHUT H. DON</small>
+  <div class="footer-links">
+    <a href="./index.html">Home</a>
+    <a href="./works.html">Works</a>
+    <a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a>
+    <a href="./credits.html">Credits</a>
+  </div>
+</footer>
 
 
 
