--- a/cv.html
+++ b/cv.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Nhut H. Don's CV</title>
 
   <meta charset="UTF-8">
-  <meta name="description" content="Nhut's Portfolio">
+  <meta name="description" content="My CV">
   <meta name="author" content="Nhut H. Don">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,200,400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800|Lilita+One&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="cvStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -32,9 +32,8 @@
 
 
 
-<!-- <div class="story-telling"> -->
+<section class="cv-intro">
 
-  <div id="wc-stuff">
     <svg id="cv-icon" width="144px" height="97px" viewBox="0 0 144 97" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
             <g id="Desktop-HD" transform="translate(-1058.000000, -396.000000)" fill-rule="nonzero">
@@ -49,86 +48,20 @@
             </g>
         </g>
     </svg>
-    <h2 id="wc-text_1">Welcome to my CV</h2>
-    <svg id="CTA-play" width="76px" height="76px" viewBox="0 0 76 76" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-            <g id="Desktop-HD" transform="translate(-1071.000000, -179.000000)" fill-rule="nonzero">
-                <circle id="CTA-btn-stroke" stroke="#F3425E" stroke-width="3" cx="1109" cy="217" r="36"></circle>
-                <path d="M1115.37787,207.091234 L1129.28528,225.170868 C1130.29548,226.48413 1130.04981,228.36767 1128.73654,229.377872 C1128.21212,229.781276 1127.56904,230 1126.90741,230 L1099.09259,230 C1097.43573,230 1096.09259,228.656854 1096.09259,227 C1096.09259,226.338367 1096.31131,225.695294 1096.71472,225.170868 L1110.62213,207.091234 C1111.63233,205.777971 1113.51587,205.532292 1114.82913,206.542494 C1115.03503,206.700878 1115.21949,206.885334 1115.37787,207.091234 Z" id="Triangle" fill="#F3425E" transform="translate(1113.000000, 217.000000) rotate(-270.000000) translate(-1113.000000, -217.000000) "></path>
-            </g>
-        </g>
-    </svg>
+    <h2 id="wc-text_1">Curriculum Vitae</h2>
+    <h5><small>NHUT H. DON</small></h5>
+
+
+  <div class="small-arrow-down">
+    <div class="btt-arrow"></div>
   </div>
+</section>
 
-  <div class="cv-navigating">
-    <p class="story"></p>
-    <h4 class="title"></h4>
-    <div class="uniSkills-wrapper">
-      <div class="uniSkill" id="graphic"></div>
-      <div class="uniSkill" id="interaction">
-        <video playsinline autoplay loop muted>
-        <source src="./Assets/title-sequence.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
-      </div>
-      <div class="uniSkill" id="3d">
-        <video playsinline autoplay loop muted>
-        <source src="./Assets/3d-garlicZoom.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
-      </div>
-      <div class="uniSkill" id="stopMotion">
-        <video playsinline autoplay loop muted>
-        <source src="./Assets/vid-stopmotion.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
-      </div>
-    </div>
-    <div class="workSkills-wrapper">
 
-        <img class="wireframes" alt="Low Fi" src="./Assets/cv-wireframe-lowfi.png" />
-        <img class="wireframes" alt="Hi Fi" src="./Assets/cv-wireframe-hifi.png" />
 
-        <img class="mockup" alt="Mockup" src="./Assets/cv-mockup.png" />
 
-        <img class="proto" alt="Prototype" src="./Assets/cv-proto.png" />
 
-        <img class="multiple-devices" alt="Multiple Devices" src="./Assets/cv-multiDevices.png" />
-
-        <img class="ab-testing" alt="Testing" src="./Assets/cv-abTesting-1.png" />
-        <img class="ab-testing" alt="Testing" src="./Assets/cv-abTesting-2.png" />
-
-        <img class="design-amends" alt="Design Amends" src="./Assets/cv-designAmends.png" />
-
-        <img class="styleguide" alt="UI Style Guide" src="./Assets/cv-styleguide.png" />
-
-        <img class="liaison" alt="Communication" src="./Assets/cv-communication.png" />
-
-        <img class="mentor" alt="Mentorship" src="./Assets/cv-mentor.png" />
-
-        <div class="tools">
-          <img class="tool" alt="Tool" src="./Assets/cv-sketch_icon.png" />
-          <img class="tool" alt="Tool" src="./Assets/cv-invision_icon.png" />
-          <img class="tool" alt="Tool" src="./Assets/cv-invisionStudio_icon.png" />
-          <img class="tool" alt="Tool" src="./Assets/cv-marvel_icon.png" />
-          <img class="tool" alt="Tool" src="./Assets/cv-zeplin_icon.png" />
-          <img class="tool" alt="Tool" src="./Assets/cv-photoshop_icon.png" />
-          <img class="tool" alt="Tool" src="./Assets/cv-illustrator_icon.png" />
-        </div>
-
-        <img class="frontend" alt="Frontend Skills" src="./Assets/cv-frontend.png" />
-
-    </div>
-  </div>
-
-  <div class="ending">
-    <h3>Thank you for bearing with me till the end</h3>
-    <p>
-      Below is a summary of my timeline for your reference.
-    </p>
-  </div>
-
-  <div class="timeline">
+  <!-- <div class="timeline">
 
     <div class="event">
       <div class="year" id="tl-2014"><strong>2014</strong></div>
@@ -233,18 +166,9 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
 
 
-
-<div class="playback-control">
-  <span class="pause">PAUSE</span>
-  <span class="replay">REPLAY</span>
-</div>
-
-<div id="skip">
-  SKIP
-</div>
 
 
 
