--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
   <meta name="theme-color" content="#ffffff">
 
 
-  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800|Lilita+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700,800|Lilita+One&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="myStyle.css">
+  <link rel="stylesheet" type="text/css" href="projectStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 </head>
@@ -4354,16 +4354,15 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/combine/npm/gsap@2,npm/jquery@3,npm/animejs@3,npm/page-scroll-to-id@1"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@2/umd/TweenMax.min.js"></script>
+<script src="./Scripts/TweenMax.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
+<script src="./Scripts/jquery.gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/TextPlugin.min.js"></script>
-<script src="./Scripts/TweenMax.min.js"></script>
-<script src="./Scripts/jquery.gsap.min.js"></script>
-<script src="./Scripts/gsap.min.js"></script>
-<script src="./Scripts/anime.min.js"></script>
-<script type="text/javascript" src="./Scripts/myScript.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="./Scripts/jquery.malihu.PageScroll2id.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/RoundPropsPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/utils/Draggable.min.js"></script>
+<script type="text/javascript" src="./Scripts/projectScript.js"></script>
 
 
 </body>
