--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
       My ambition is to work on innovative products with great values. I am very enthusiastic (too much at times)
       when it comes to problem solving and making things work.
       I believe that good designs look nice, while great designs make sense, and Art is a whole different story (yes, I'm also
-      a fan of Art and there's a fine line between Art & Design).
+      a fan of Art and I know the difference).
        <br />
       <br />
       <strong>The Me:</strong> I am a guaranteed team player at work, dog parent at home, and a loner on the road.
@@ -110,11 +110,11 @@
          .st0{fill:#748289;}
         </style>
 
-            <foreignObject width="100%" height="100%" x="174" y="197">
+            <foreignObject class="myEyes" width="100%" height="100%" x="174" y="197">
               <div class="myEye" id="myLeftEye"></div>
             </foreignObject>
 
-            <foreignObject width="100%" height="100%" x="265" y="193">
+            <foreignObject class="myEyes" width="100%" height="100%" x="265" y="193">
               <div class="myEye" id="myRightEye"></div>
             </foreignObject>
 
