fixing dispositioned eyes

--- a/about.html
+++ b/about.html
@@ -110,11 +110,11 @@
          .st0{fill:#748289;}
         </style>
 
-            <foreignObject class="myEyes" width="100%" height="100%" x="174" y="197">
+            <foreignObject width="100%" height="100%" x="174" y="197">
               <div class="myEye" id="myLeftEye"></div>
             </foreignObject>
 
-            <foreignObject class="myEyes" width="100%" height="100%" x="265" y="193">
+            <foreignObject width="100%" height="100%" x="265" y="193">
               <div class="myEye" id="myRightEye"></div>
             </foreignObject>
 
