testing eyes again

--- a/about.html
+++ b/about.html
@@ -111,16 +111,16 @@
         </style>
 
             <foreignObject width="100%" height="100%" x="174" y="197">
-              <div class="myEye" id="myLeftEye"></div>
+              <span class="myEye" id="myLeftEye"></span>
             </foreignObject>
 
             <foreignObject width="100%" height="100%" x="265" y="193">
-              <div class="myEye" id="myRightEye"></div>
+              <span class="myEye" id="myRightEye"></span>
             </foreignObject>
 
-            <!-- <path class="eyeLid" id="leftEyeLid" d="M159.4,213.2c0,0,11-19,30-16s0,0,0,0s18,1,21,19s0,0,0,0s-13,3-25,4s0,0,0,0S174.4,221.2,159.4,213.2z"/>
+            <path class="eyeLid" id="leftEyeLid" d="M159.4,213.2c0,0,11-19,30-16s0,0,0,0s18,1,21,19s0,0,0,0s-13,3-25,4s0,0,0,0S174.4,221.2,159.4,213.2z"/>
             <path class="eyeLid" id="rightEyeLid" d="M254.8,211c0,0,8.9-20.1,28.1-19.1s0,0,0,0s18-0.9,22.9,16.6c4.9,17.6,0,0,0,0s-12.6,4.4-24.4,6.7
-  	          c-11.8,2.3,0,0,0,0S270.6,217.4,254.8,211z"/> -->
+  	          c-11.8,2.3,0,0,0,0S270.6,217.4,254.8,211z"/>
 
          <g id="portrait-Layer_2">
 
