--- a/about.html
+++ b/about.html
@@ -111,11 +111,11 @@
         </style>
 
             <foreignObject width="100%" height="100%" x="174" y="197">
-              <span class="myEye" id="myLeftEye"></span>
+              <div class="myEye" id="myLeftEye"></div>
             </foreignObject>
 
             <foreignObject width="100%" height="100%" x="265" y="193">
-              <span class="myEye" id="myRightEye"></span>
+              <div class="myEye" id="myRightEye"></div>
             </foreignObject>
 
             <path class="eyeLid" id="leftEyeLid" d="M159.4,213.2c0,0,11-19,30-16s0,0,0,0s18,1,21,19s0,0,0,0s-13,3-25,4s0,0,0,0S174.4,221.2,159.4,213.2z"/>
