--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 <!-- Generator: Adobe Illustrator 21.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 
     <svg id="svg-portrait" version="1.1"
-        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 473.6 610.7"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  viewBox="0 0 473.6 610.7"
         style="enable-background:new 0 0 473.6 610.7;" xml:space="preserve">
         <style type="text/css">
          .st0{fill:#748289;}
