--- a/about.html
+++ b/about.html
@@ -103,20 +103,28 @@
     </div>
 <!-- Generator: Adobe Illustrator 21.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 
-    <svg id="svg-portrait" width="100%" height="100%" version="1.1"
+  <div class="marpit">
+
+    <svg id="svg-portrait" width="100%" height="100%" version="1.1" data-marpit-svg=""
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 473.6 610.7"
         style="enable-background:new 0 0 473.6 610.7;" xml:space="preserve">
         <style type="text/css">
          .st0{fill:#748289;}
         </style>
 
-            <foreignObject width="100%" height="100%" x="174" y="197">
-              <div class="myEye" id="myLeftEye" xmlns="http://www.w3.org/1999/xhtml"></div>
+
+            <foreignObject width="22px" height="22px" x="174" y="197" overflow="visible">
+              <section>
+                <div class="myEye" id="myLeftEye" xmlns="http://www.w3.org/2000/xmlns/"></div>
+              </section>
             </foreignObject>
 
-            <foreignObject width="100%" height="100%" x="265" y="193">
-              <div class="myEye" id="myRightEye" xmlns="http://www.w3.org/1999/xhtml"></div>
+            <foreignObject width="100%" height="100%" x="265" y="193" overflow="visible">
+              <section>
+                <div class="myEye" id="myRightEye" xmlns="http://www.w3.org/2000/xmlns/"></div>
+              </section>
             </foreignObject>
+
 
             <path class="eyeLid" id="leftEyeLid" d="M159.4,213.2c0,0,11-19,30-16s0,0,0,0s18,1,21,19s0,0,0,0s-13,3-25,4s0,0,0,0S174.4,221.2,159.4,213.2z"/>
             <path class="eyeLid" id="rightEyeLid" d="M254.8,211c0,0,8.9-20.1,28.1-19.1s0,0,0,0s18-0.9,22.9,16.6c4.9,17.6,0,0,0,0s-12.6,4.4-24.4,6.7
@@ -4329,7 +4337,7 @@
 
     </svg>
 
-
+    </div>
   </div>
 
 
@@ -4355,6 +4363,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@2/umd/TweenMax.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@marp-team/marpit-svg-polyfill/lib/polyfill.browser.js"></script>
 <script src="./Scripts/TweenMax.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 <script src="./Scripts/jquery.gsap.min.js"></script>
