--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
    <div class="my-portrait">
     <div class="portrait-cover">
       <p class="centered-text">
-        <small style="font-weight:300">
+        <small>
           <i>Nothing fancy here, just a pic of me. <br /> (Don't click if you have Trypophobia though)</i>
         </small>
       </p>
@@ -113,13 +113,13 @@
         </style>
 
 
-            <foreignObject width="22px" height="22px" x="174" y="197" overflow="visible">
+            <foreignObject width="100%" height="100%" x="172" y="197" overflow="visible">
               <section>
                 <div class="myEye" id="myLeftEye" xmlns="http://www.w3.org/2000/xmlns/"></div>
               </section>
             </foreignObject>
 
-            <foreignObject width="100%" height="100%" x="265" y="193" overflow="visible">
+            <foreignObject width="100%" height="100%" x="264" y="194" overflow="visible">
               <section>
                 <div class="myEye" id="myRightEye" xmlns="http://www.w3.org/2000/xmlns/"></div>
               </section>
