--- a/bardot.html
+++ b/bardot.html
@@ -73,7 +73,8 @@
       <h2>Bardot</h2>
       <p>
         Being one of the most iconic Australia's high fashion brands, Bardot's website had a lot to take into consideration.
-        I was in a UX/UI team to deliver a refreshed eCommerce website as part of their re-platform process.
+        The old website was outdated with clunky header and ineffectively organised contents.
+        Our job was to optimise and deliver a refreshed eCommerce website as part of their re-platform process.
       </p>
     </div>
       <div class="block block-in">
@@ -95,10 +96,8 @@
       <p>
         As a dedicated eCommerce website,
         the project required many micro interactions, functionalities and heavy mobile optimisation.
-        My role was to work alongside with the UX/UI practise lead to gather insights
-        from the user research team and roll out wireframes and interactive prototype.
-        The project required lots of collaboration between different teams and stakeholders to ensure it would meet client's
-        expectations and the allocated timeframe and budget at the same time.
+        We had to keep in mind all aspects during the design process, from design principles to user testings, to meeting project
+        timeframe and budget, so on and so forth.
       </p>
     </div>
   </div>
@@ -110,9 +109,10 @@
       <h4>SEARCH</h4>
       <p>
         'Search' function is one important part of an eCommerce website.
-        In this case, trending items were always the focus so we took any opportunity to introduce them.
-        Psychologically speaking, we thought incorporating these items even before customers type anything would serve as 'hints'
-        to draw their attention and would probably alter what they want to search for.
+        The old search bar was visually unappealing and hard to find.
+        We re-designed it with trending items as a pre-suggestion because
+        psychologically speaking, we thought they would serve as 'hints'
+        to draw user's attention and would probably alter what they want to search for.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -146,8 +146,7 @@
       <p>
         Base on results and heatmaps from user research team, the majority of user interactions were within the top.
         Login, Wishlish and Bag were the most clicked.
-        The old website's header were crowded and confusing, so
-        we decluttered it by removing unnecessary items and designed a new streamlined one with only
+        We decluttered the old header by removing unnecessary items and designed a new streamlined one with only
         mandatory items easily accessible.
       </p>
     </div>
@@ -163,9 +162,9 @@
     <h4 class="block-in">MEGA DROPDOWN MENU</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Dropdown navigation menu with integrated CTA banners suggesting trending items, promotions, collections, etc.
-        that were relevant to each category. We made use of the header's real estate as much as possible for
-        contents that we wanted to draw customers' attention to.
+        We blew a new wind into the Dropdown navigation by integrating CTA banners (of trending items, promotions,
+        collections, etc.) that were relevant to each category. We made use of the header's real estate as much as possible for
+        highlight contents.
       </p>
     </div>
 
@@ -180,9 +179,8 @@
     <div class="block small-block block-in">
       <h4>LOCATE IN-STORE</h4>
       <p>
-        Client wanted to integrate a function to show which stores the item is currently available at.
-        We agreed that this should come up as a popup for a quick
-        check-and-close action before moving on with the shopping.
+        An out-of-scope function to show which stores the item is currently available at.
+        We agreed that this should come up as a popup for a quick check-and-close action before moving on with the shopping.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -193,7 +191,8 @@
     <h4 class="block-in">STORE FINDER</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Not to be confused with "Locate in-store". Store finder was basically a stores listing page.
+        A store listing page with integrated Store finder and filter. Store-related promotions could also be
+        shown intentionally (if applicable).
       </p>
     </div>
     <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
@@ -212,7 +211,7 @@
       <h4>PRODUCT BADGES</h4>
       <p>
         5 types of badges required. Each had to be visually distinguished from one another and fit well together within
-        each product tile (maximum of 4 badges per product).
+        each product tile.
       </p>
     </div>
     <div class="block no-text-block big-block block-in">
@@ -230,7 +229,7 @@
 
 
 <section id="bardot-learnings">
-  <h3 class="block-in">LEARNINGS</h3>
+  <h3 class="block-in">Project Conclusion</h3>
   <div class="wrapper">
     <div class="block block-in">
       <p>
@@ -251,14 +250,14 @@
   <h2 class="block-in">Other Works</h2>
   <div class="work-tiles">
 
-    <div class="work-tile block-in come-in" >
+    <div class="work-tile block-in" >
       <div id="tile_schecker"></div>
       <a href="./scheckerIntro.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
       </a>
     </div>
 
-    <div class="work-tile block-in come-in">
+    <div class="work-tile block-in">
       <div id="tile_sa"></div>
       <a href="./sa.html" class="tile-CTA">
         <img alt="SA Logo" src="./Assets/logo_sa.png" />
