--- a/sa.html
+++ b/sa.html
@@ -126,7 +126,7 @@
     <div class="block small-block block-in">
       <h4>STANDARDS CATEGORY STYLING</h4>
       <p>
-        Each Standards Category was assigned a monochromatic set of coloured blocks that complies with the brand's guideline.
+        We assigned each Standards Category a monochromatic set of coloured blocks for visual and filtering purposes.
       </p>
     </div>
   </div>
@@ -135,7 +135,7 @@
     <div class="block small-block block-in">
       <h4>SEARCH</h4>
       <p>
-        Expanded search panel with popular/most searched content and standards shown.
+        We modernised the expanded search panel to be clear and bold showing popular/most searched contents and standards.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -199,14 +199,14 @@
 
 
 <section id="sa-learnings">
-  <h3 class="block-in">LEARNINGS</h3>
+  <h3 class="block-in">Project Conclusion</h3>
   <div class="wrapper">
     <div class="block block-in">
       <p>
-        Consistency and details were very important in this project. The client had
-        clear requirements on margins, lengths and visibility of contents 'above the fold' and expected the
-        display to retain the same across different screen dimensions. Therefore, we did a lot of responsive testings.
-        Understanding that no client and/or project is the same, we always kept flexibility in mind for every project we came across.
+        Despite we proposed the website to be designed base on a 12-col bootstrap grid system, lots of alterations were made as
+        client had different requirements on margins, lengths and visibility of contents 'above the fold' and expected the
+        display to retain the same across different screen dimensions. We also committed lots of responsive testings.
+        Flexibility is the key, after all.
       </p>
     </div>
   </div>
