overlay link update

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <div class="menu-items" id="menu-links">
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><span class="menu-items_highlight">About</span></li>
+        <li><a href="./about.html"><span class="menu-items_highlight">About</span></a></li>
         <li><a href="./works.html">Works</a></li>
         <li><a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a></li>
       </ul>
