--- a/works.html
+++ b/works.html
@@ -52,7 +52,7 @@
   <ul>
     <li><a href="./index.html">Home</a></li>
     <li><a href="./about.html">About</a></li>
-    <li><span class="menu-items_highlight">Works</span></li>
+    <li><a href="./works.html"><span class="menu-items_highlight">Works</span></a></li>
     <li><a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a></li>
   </ul>
 </div>
