--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
   <div class="menu-items" id="menu-links">
     <ul>
-      <li><span class="menu-items_highlight">Home</span></li>
+      <li><a href="./index.html"><span class="menu-items_highlight">Home</span></a></li>
       <li><a href="./about.html">About</a></li>
       <li><a href="./works.html">Works</a></li>
       <li><a href="./index.html#contact-me" rel="m_PageScroll2id">Contact</a></li>
