very minor changes

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -83,7 +83,7 @@
       <div class="block">
         <p>
           Ever had <span><a target="_blank" href="https://www.google.com/search?q=cyberchondria">Cyberchondria</a></span>
-            while googling your symptoms? <br />
+          after <a target="_blank" href="https://youtu.be/Vn_ZkI7-IZ4">googling your symptoms?</a> <br />
           The App uses AI to accurately assess your symptom(s) and provide possible causes, then allows you to book appointments
           with a relevant physician for official diagnosis and treatments. Then, it helps keeping track of those
           symptoms, as well as your medication.
