--- a/works.html
+++ b/works.html
@@ -122,7 +122,7 @@
         Sorry it's a really nice video your browser failed to load.
       </video>
 
-      <img alt="Type Creature" id="type-creature" src="./Assets/TypeCreature.png" />
+      <img alt="Type Creature" id="type-creature" class="block-in" src="./Assets/TypeCreature.png" />
 
     </div>
 
@@ -136,8 +136,8 @@
     </div>
 
     <div class="other-work-tile">
-      <div class="other-work-tile" class="block-in">
-        <img alt="Nabulio Logo" id="nabulio" src="./Assets/nabulio.png" />
+      <div class="other-work-tile">
+        <img alt="Nabulio Logo" id="nabulio" class="block-in" src="./Assets/nabulio.png" />
 
         <img alt="" src="./Assets/Nabulio-Mockup.jpg" class="block-in"/>
       </div>
